Refactor battle module, saving battle results in db